--- a/templates/systemd_unit.j2
+++ b/templates/systemd_unit.j2
@@ -6,12 +6,13 @@ WorkingDirectory={{ nodejs_app_install_dir }}
 ExecStart={{ nodejs_executable }} {{ nodejs_app_start_script }}
 User={{ nodejs_app_username }}
 Group={{ nodejs_app_groupname }}
-Restart=always
+Restart=on-failure
 StandardOutput=journal
 StandardError=journal
 {% if nodejs_app_env_vars %}
 Environment={% for arg in nodejs_app_env_vars %}{{ arg }}{% if not loop.last %} {% endif %}{% endfor %}
 {% endif %}
+
 
 [Install]
 WantedBy=multi-user.target
