FLOE-420: Uses nodemon to start app when using a dev env

--- a/templates/systemd_unit.j2
+++ b/templates/systemd_unit.j2
@@ -2,10 +2,16 @@
 Description={{ nodejs_app_name }}
 
 [Service]
-WorkingDirectory={{ nodejs_app_install_dir }} 
+WorkingDirectory={{ nodejs_app_install_dir }}
+{% if nodejs_app_dev_env %}
+ExecStart={{ nodejs_dev_executable }} {{ nodejs_app_start_script }}
+User={{ nodejs_app_dev_username }}
+Group={{ nodejs_app_dev_groupname }}
+{% else %}
 ExecStart={{ nodejs_executable }} {{ nodejs_app_start_script }}
 User={{ nodejs_app_username }}
 Group={{ nodejs_app_groupname }}
+{% endif %}
 Restart=on-failure
 StandardOutput=journal
 StandardError=journal
