run nodemon in dev mode under supervisord (for Docker)

--- a/templates/supervisor_nodejs.ini.j2
+++ b/templates/supervisor_nodejs.ini.j2
@@ -1,5 +1,11 @@
 [program:{{ nodejs_app_name }}]
+
+{% if nodejs_app_dev_env %}
+command={{ nodejs_dev_executable }} {{ nodejs_app_start_script }}
+{% else %}
 command={{ nodejs_executable }} {{ nodejs_app_start_script }}
+{% endif %}
+
 {% if nodejs_app_env_vars %}
 environment={% for arg in nodejs_app_env_vars %}{{ arg }}{% if not loop.last %},{% endif %}{% endfor %}
 {% endif %}
