--- a/templates/systemd_unit.j2
+++ b/templates/systemd_unit.j2
@@ -18,8 +18,8 @@ Group={{ nodejs_app_groupname }}
 Restart=on-failure
 StandardOutput=journal
 StandardError=journal
-{% if nodejs_app_env_vars %}
-Environment={% for arg in nodejs_app_env_vars %}{{ arg }}{% if not loop.last %} {% endif %}{% endfor %}
+{% if nodejs_app_env_vars or nodejs_app_tcp_port %}
+Environment={% for arg in nodejs_app_env_vars %}{{ arg }}{% if not loop.last %} {% endif %}{% endfor %}{% if nodejs_app_tcp_port %} {{ nodejs_app_name|upper|replace('-','_') }}_TCP_PORT={{ nodejs_app_tcp_port }}{% endif %}
 {% endif %}
 
 
