Add nodejs_options so users can pass options to the node executable (see `man node`).

--- a/templates/supervisor_nodejs.ini.j2
+++ b/templates/supervisor_nodejs.ini.j2
@@ -3,7 +3,7 @@
 {% if nodejs_app_dev_env %}
 command={{ nodejs_dev_executable }} {{ nodejs_app_start_script }}
 {% else %}
-command={{ nodejs_executable }} {{ nodejs_app_start_script }}
+command={{ nodejs_executable }} {{ nodejs_options }} {{ nodejs_app_start_script }}
 {% endif %}
 
 {% if nodejs_app_env_vars %}
