--- a/templates/systemd_unit.j2
+++ b/templates/systemd_unit.j2
@@ -6,7 +6,7 @@ WorkingDirectory={{ nodejs_app_install_dir }}
 {% if nodejs_app_dev_env %}
 ExecStart={{ nodejs_dev_executable }} -L {% if nodejs_app_monitor_file_extensions %} -e {{ nodejs_app_monitor_file_extensions|join(',') }} {% endif %} {{ nodejs_app_start_script }}
 {% else %}
-ExecStart={{ nodejs_executable }} {{ nodejs_app_start_script }}
+ExecStart={{ nodejs_executable }} {{ nodejs_options }} {{ nodejs_app_start_script }}
 {% endif %}
 {% if nodejs_app_dev_env or is_vagrant %}
 User={{ nodejs_app_dev_username }}
